codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 778
expression: rendered
---

  >_ OpenAI Codex (v0.1.11)
     /tmp/project

  Tip: Model just became available
